[package]
name = "rusty-slackbot"
version = "0.1.0"
authors = ["Oren Epshtain"]
edition = "2021"

[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.8", features = ["json", "blocking"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"
anyhow = "1.0.52"
regex = "1.5.4"
slack-morphism = "0.24"
slack-morphism-models = "0.24"
slack-morphism-hyper = "0.24"
tokio = { version = "1.15.0", features = ["rt"] }
html-escape = "0.2.9"
tracing = "0.1.29"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.5", features = ["env-filter", "std", "fmt", "json", "ansi"] }
tracing-log = "0.1.2"
uuid = "0.8.2"

[dev-dependencies]
httpmock = "0.6.6"
rstest = "0.12.0"
